[gd_scene load_steps=4 format=2]

[ext_resource path="res://Container-of-iObjs.gd" type="Script" id=1]
[ext_resource path="res://Interactive-Object.tscn" type="PackedScene" id=2]
[ext_resource path="res://Room.gd" type="Script" id=3]

[node name="Room" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Container_of_iObjs" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Interactive_Object1" parent="Container_of_iObjs" instance=ExtResource( 2 )]

[node name="Interactive_Object2" parent="Container_of_iObjs" instance=ExtResource( 2 )]

[node name="Interactive_Object3" parent="Container_of_iObjs" instance=ExtResource( 2 )]

[node name="Interactive_Object4" parent="Container_of_iObjs" instance=ExtResource( 2 )]

[node name="Interactive_Object5" parent="Container_of_iObjs" instance=ExtResource( 2 )]

[connection signal="Ask_about_key" from="Container_of_iObjs/Interactive_Object1" to="." method="_on_Interactive_Object1_Ask_about_key"]
[connection signal="Give_Item" from="Container_of_iObjs/Interactive_Object1" to="." method="_on_Interactive_Object1_Give_Item"]
[connection signal="Request_Room_Change" from="Container_of_iObjs/Interactive_Object1" to="." method="_on_Interactive_Object1_Request_Room_Change"]
[connection signal="Ask_about_key" from="Container_of_iObjs/Interactive_Object2" to="." method="_on_Interactive_Object2_Ask_about_key"]
[connection signal="Give_Item" from="Container_of_iObjs/Interactive_Object2" to="." method="_on_Interactive_Object2_Give_Item"]
[connection signal="Request_Room_Change" from="Container_of_iObjs/Interactive_Object2" to="." method="_on_Interactive_Object2_Request_Room_Change"]
[connection signal="Ask_about_key" from="Container_of_iObjs/Interactive_Object3" to="." method="_on_Interactive_Object3_Ask_about_key"]
[connection signal="Give_Item" from="Container_of_iObjs/Interactive_Object3" to="." method="_on_Interactive_Object3_Give_Item"]
[connection signal="Request_Room_Change" from="Container_of_iObjs/Interactive_Object3" to="." method="_on_Interactive_Object3_Request_Room_Change"]
[connection signal="Ask_about_key" from="Container_of_iObjs/Interactive_Object4" to="." method="_on_Interactive_Object4_Ask_about_key"]
[connection signal="Give_Item" from="Container_of_iObjs/Interactive_Object4" to="." method="_on_Interactive_Object4_Give_Item"]
[connection signal="Request_Room_Change" from="Container_of_iObjs/Interactive_Object4" to="." method="_on_Interactive_Object4_Request_Room_Change"]
[connection signal="Ask_about_key" from="Container_of_iObjs/Interactive_Object5" to="." method="_on_Interactive_Object5_Ask_about_key"]
[connection signal="Give_Item" from="Container_of_iObjs/Interactive_Object5" to="." method="_on_Interactive_Object5_Give_Item"]
[connection signal="Request_Room_Change" from="Container_of_iObjs/Interactive_Object5" to="." method="_on_Interactive_Object5_Request_Room_Change"]
